# rs-claw-one

./: .gitignore  Cargo.toml  LICENSE  QQ空间公布文案.md  README.md  build-gui.bat  mimo的方案.md  使用指南.md  项目报告.md
.github/workflows/: build-windows-gui.yml
config/: default.toml
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/agent/: mod.rs  runtime.rs  system_prompt.rs  tool_use.rs
src/cli/: args.rs  mod.rs  repl.rs  style.rs
src/config/: mod.rs  types.rs
src/context/: loader.rs  mod.rs
src/gateway/: auth.rs  mod.rs  protocol.rs  router.rs  server.rs  session.rs
src/memory/: compaction.rs  mod.rs  persistent.rs  session_memory.rs  vector_store.rs
src/model/: claude.rs  deepseek.rs  mod.rs  openai.rs  traits.rs
src/skill/: execute.rs  match.rs  mod.rs  refine.rs  store.rs
src/storage/: mod.rs  sqlite.rs  vector.rs
src/tools/: filesystem.rs  mod.rs  network.rs  process.rs
src/tools/browser/: mod.rs
src/tools/desktop/: accessibility.rs  input.rs  mod.rs  vision.rs
ui/: index.html
ui/css/: animations.css  components.css  layout.css  variables.css
ui/js/: app.js  chat.js  sidebar.js  utils.js
vm/: start-win11.sh
编译测试结果/: get_weather_condition.vec  handle_program_not_found.vec  测试信息.txt
