[package]
name = "rs-claw-gui"
version = "0.3.0"
edition = "2021"

[dependencies]
rs-claw = { path = ".." }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
